--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-pandas
-numpy
-scikit-learn
-matplotlib
-streamlit
+streamlit==1.19.0
+altair==4.2.2
+pandas>=1.5,<3.0
+numpy>=1.23,<2.0
+scikit-learn>=1.2
+matplotlib>=3.6
+scipy>=1.9
